# ZEPHYR-TEST

./: README.md  west.yml
app/: CMakeLists.txt  app.overlay  prj.conf
app/include/: analog_read_thread.h  pid_thread.h  pwm_thread.h  uart_thread.h
app/src/: analog_read_thread.c  main.c  pid_thread.c  pwm_thread.c  uart_thread.c
